--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 <title>D-Multi | Official Status Page</title>
-<link href="main.css" rel="stylesheet">
+<link href="https://d-multi.com/main.css" rel="stylesheet">
 <link href="https://dguis.github.io/RES/New%20Logos/B500x500t.png" rel="icon">
-<link href="slideshow.css" rel="stylesheet">
+<link href="https://d-multi.com/slideshow.css" rel="stylesheet">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/5c6c2aea2562699d323292138/9e12c6a51aef531362cf71984.js");</script>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -25,6 +25,6 @@
   <div class="page">
  
 </div>
-  <script src="main.js"></script>
+  <script src="https://d-multi.com/main.js"></script>
 </body>
 </html>
